feat: WIP install eslint & husky

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,10 @@
       },
       "extends": [
         "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
+        "plugin:@angular-eslint/template/process-inline-templates",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
       ],
       "rules": {
         "@angular-eslint/component-class-suffix": [
@@ -42,5 +45,12 @@
       "extends": ["plugin:@angular-eslint/template/recommended"],
       "rules": {}
     }
-  ]
+  ],
+  "rules": {
+    "complexity": ["error", 4],
+    "eqeqeq": "error",
+    "no-unused-vars": "error",
+    "no-useless-rename": "error",
+    "no-var": "error"
+  }
 }
