--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "app",
+            "prefix": "",
             "style": "kebab-case"
           }
         ],
