feat: save token to cookie

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 
     // https://stackoverflow.com/questions/70106472/property-fname-comes-from-an-index-signature-so-it-must-be-accessed-with-fn
     "noPropertyAccessFromIndexSignature": false,
+    "strictNullChecks": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
