--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic/angular": "^7.0.0",
     "@ionic/core": "^7.5.5",
     "ionicons": "^7.0.0",
+    "ngx-cookie-service": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
